<resources>
    <string name="app_name">ShareRide</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_activity_google_places">GooglePlacesActivity</string>
    <string name="title_activity_ride">RideActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="login_tv">LOGIN</string>
    <string name="username_tv">USER NAME</string>
    <string name="password_tv">PASSWORD</string>
    <string name="password_hint">Enter the Password</string>
    <string name="confirm_password">Confirm the Password</string>
    <string name="phone_hint">Phone Number</string>
    <string name="username_hint">Enter the Username</string>
    <string name="email_hint">Enter the Email Address</string>
    <string name="name_hint">Firstname Lastname</string>
    <string name="login_bt">LOGIN</string>
    <string name="forgotpass_tv">Forgot Password?</string>
    <string name="newuser_tv">Create New Account</string>
    <string name="email_tv">Email</string>
    <string name="submit_bt">SUBMIT</string>
    <string name="contactinfo_tv">Contact Details</string>
    <string name="address_tv">ADDRESS</string>
    <string name="newsubmit_et">Submit</string>
    <string name="newupdate_et">Update</string>
    <string name="time_prompt">Select Time...</string>
    <string name="logout">Logout</string>

    <string-array name="time_arrays">
        <item>1:00</item>
        <item>2:00</item>
        <item>3:00</item>
        <item>4:00</item>
        <item>5:00</item>
        <item>6:00</item>
        <item>7:00</item>
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
        <item>24:00</item>
    </string-array>

    <string-array name="frequency_arrays">
        <item>Daily</item>
        <item>Select Date</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
