<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.s525120.android.shareride.RegistrationActivity">


    <EditText
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:textColorHint="#000000"
        android:background="#33FFFFFF"
        android:inputType="textPersonName"
        android:textStyle="bold"
        android:id="@+id/name_et"
        android:layout_alignParentTop="true"
        android:hint="@string/name_hint"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:textColorHint="#000000"
        android:background="#33FFFFFF"
        android:hint="@string/username_hint"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:id="@+id/newusername_et"
        android:layout_below="@+id/name_et"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:textColorHint="#000000"
        android:background="#33FFFFFF"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:textStyle="bold"
        android:id="@+id/password_et"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/newusername_et"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:textColorHint="#000000"
        android:background="#33FFFFFF"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:id="@+id/confirmpassword_et"
        android:layout_below="@+id/password_et"
        android:layout_centerHorizontal="true"/>


            <EditText
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColorHint="#000000"
                android:background="#33FFFFFF"
                android:inputType="phone"
                android:hint="@string/phone_hint"
                android:ems="10"
                android:id="@+id/phone_et"
                android:layout_below="@+id/confirmpassword_et"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColorHint="#000000"
                android:background="#33FFFFFF"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:id="@+id/newemail_et"
                android:hint="@string/email_hint"

                android:layout_below="@+id/phone_et"/>




            <EditText
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColorHint="#000000"
                android:background="#33FFFFFF"
                android:id="@+id/street_et"
                android:hint="street address"
                android:layout_below="@+id/newemail_et"
                />

            <EditText
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColorHint="#000000"
                android:background="#33FFFFFF"
                android:layout_marginTop="10dp"
                android:hint="City Name"
                android:id="@+id/city_et"
                android:layout_below="@+id/street_et"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColorHint="#000000"
                android:background="#33FFFFFF"
                android:id="@+id/zip_et"
                android:layout_marginTop="10dp"
                android:hint="Zip Code"
                android:layout_below="@+id/city_et"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newsubmit_et"
        android:textColor="#f2000000"
        android:background="#e6ffFFFF"
        android:id="@+id/newsubmit_bt"
        android:layout_below="@id/zip_et"

        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
