<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    android:animateLayoutChanges="true"
    tools:context=".LoginActivity">
    <SurfaceView
        android:id="@+id/surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:layout_marginTop="0dp"
        android:paddingTop="0dip"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:textStyle="bold"
            android:id="@+id/username_et"
            android:textColorHint="#ffffff"
            android:background="#e6000000"
            android:textColor="#ffffff"
            android:hint="@string/username_hint"
            android:layout_gravity="center"
            android:layout_below="@+id/username_tv"
            android:layout_centerHorizontal="true"
            android:imeOptions="actionDone"
            android:singleLine="true"
        />



        <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/password_et"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:textColorHint="#ffffff"
            android:background="#e6000000"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_below="@+id/password_tv"
            android:layout_alignLeft="@+id/username_et"
            android:layout_alignStart="@+id/username_et"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login_bt"
            android:background="#FFFFFF"
            android:id="@+id/login_bt"
            android:layout_gravity="center"
            android:layout_below="@+id/password_et"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:textColor="#000000"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_bt"
            android:layout_marginTop="20dp">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/forgotpass_tv"
                android:id="@+id/forgotpass_tv"
                android:layout_marginLeft="20dp"
                android:layout_alignParentLeft="true"
                android:textColor="#ffffff"
                android:background="#e6000000"
                 android:textStyle="bold"
                android:gravity="center"

            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/newuser_tv"
                android:id="@+id/newuser_tv"
                android:textColor="#ffffff"
                android:background="#e6000000"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:textStyle="bold"
                android:gravity="center"
                />
</RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
